src/objects/GLBL_Error_Logs__c.object
<CustomObject>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Numbers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>PEP Logs</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>PEP Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PEP Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>